src/objects/CC_Snapshot__c.object
<CustomObject>
    <description>Captures the details (Center Location, Owner, Completion Date, Consult Result) of completed Consults.</description>
    <fields>
        <fullName>Center_Location__c</fullName>
        <description>Location where the Consult took place, at the time the snapshot was taken. (Deprecated)</description>
        <inlineHelpText>Center Location at the time the snapshot was created</inlineHelpText>
        <label>Center Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Center_Location_sort__c</fullName>
        <description>Pulls in the Center Locationsort field from the Consult record for use in Excel; this allows the satellite centers to be grouped for display on the Sales Dashboard.</description>
        <formula>Consult__r.Center_Location_sort__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Consult: Center Location sort (live data)</inlineHelpText>
        <label>Center Location sort</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consult_Center_Location__c</fullName>
        <description>Cross-object formula - Consult:Center Location</description>
        <formula>Text( Consult__r.Center_Location__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consult: Center Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consult_Completed_Date__c</fullName>
        <description>The date that the Consult was completed.</description>
        <label>Consult Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Consult_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consult Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consult_Name__c</fullName>
        <description>Patient&apos;s name</description>
        <label>Consult Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consult_Owner_Role__c</fullName>
        <description>Consult Owner&apos;s user role, passed in during the analytic snapshot process.</description>
        <label>Consult Owner: Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consult_Owner_Traveler_Until__c</fullName>
        <description>Streamlining the process of tracking Travelers; rather than using cross-object formulas and workflow, the Analytic Snapshot source report can access the User: Traveling Until date of the Record Owner.</description>
        <label>Consult Owner: Traveler Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Consult_Owner__c</fullName>
        <label>Consult Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consult_Result__c</fullName>
        <label>Consult Result</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consult__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Consult (Account) that the Snapshot was derived from</description>
        <label>Consult</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Consult_Completion_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exclude_from_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for test data, to allow it to remain in SFDC w/o impacting the Excel dashboard.</description>
        <label>Exclude from Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Traveler__c</fullName>
        <description>Identifies Consult Creators that are designated as Travelers on their User record ($User: Traveler)</description>
        <label>Traveler</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>C.C. Snapshot</label>
    <nameField>
        <displayFormat>CCS-{0000}</displayFormat>
        <label>CCS #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>C.C. Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>